# llm-prjt-2025-04-model-prompts-parser

./: .env.example  LICENSE  README.md  github.sh  run.sh
llm/: pyproject.toml
llm/llm/: main.py
